[package]
name = "trillium-prometheus"
version = "0.1.0"
edition = "2021"
description = "Trillium handler for Prometheus metrics scrapes"
repository = "https://github.com/divviup/trillium-prometheus"
license = "MPL-2.0"

[dependencies]
prometheus = { version = "0.13.3", default-features = false }
tracing = { version = "0.1.37", default-features = false }
trillium = "0.2.8"
trillium-router = "0.3.5"

[dev-dependencies]
trillium-smol = "0.2.1"
trillium-testing = { version = "0.4.2", features = ["smol"] }
